# writernote-qt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  language.qrc  null.d  script.py  struttura_struct_classi  test.writer  ui_audioqualityoption.h  ui_inserttable_class.h  ui_mainwindow.sync-conflict-20201120-092042-YHRVUKW.h  ui_table_insert.h  writernote.pro  writernote.qrc
.github/workflows/: android.yml  android_docker.yml  codeql-analysis.yml  flatpak.yml  ios.yml  linux qt5.yml  linux qt6.yml  linux.yml  macos.yml  main.yml  snapcraft.yml  windows.yml  windows_vcpkg.yml
android/: Dockerfile  README.md  build.sh  lib_libzip_compile.sh
android/android/: AndroidManifest.xml  build.gradle
compilescript/: compile.sh  dipendenza.sh  export_ver_qt.py  get_all_file.py  multi.py  removeSetting.sh  resourcecompile.sh  search.sh
flatpak/: com.github.giacomogroppi.writernote-qt  com.github.giacomogroppi.writernote-qt.appdata.xml  com.github.giacomogroppi.writernote-qt.desktop  com.github.giacomogroppi.writernote-qt.xml  com.writernote.json  w-writer.desktop
help/: compile-cloud.md  help-snapcraft-audio.md
images/: project-preview-item.xcf
language/: README.md  dep.sh  es.qm  es.ts  fr.qm  fr.ts  it.qm  it.ts  release_all.sh  update_all.sh
macos-build/: Info.plist  build_freetype.sh  build_libzip.sh  build_mozjpeg.sh  build_openjpeg.sh  build_openpng.sh  build_poppler.sh  build_zlib-ng.sh  compile.sh  dep.sh  export_xcode.sh  get_dep.py  prepare.sh
snap/: snapcraft.yaml  snapcraft_qt5.yaml
snap/gui/: writernote.desktop
src/: .indice_class..swp  README.md  Readable.h  VersionFileController.cpp  VersionFileController.h  Writable.h  addExt.cpp  areyousure.cpp  areyousure.h  changeCopybook.cpp  chartoint.cpp  chartoint.h  checkfileintozip.cpp  closeevent_file.cpp  controllUi.cpp  dialog_critic.cpp  dialog_critic.h  filelost.cpp  filelost.h  indice_class.cpp  indice_class.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  needToSave.cpp  newcopybook_.cpp  newcopybook_.h  openFirstCopybook.cpp  open_file.cpp  savecopybook.cpp  savecopybook.h  self_class.cpp  self_class.h  setting_ui.cpp  setting_ui.h  sizeButton.cpp  stringgenerator.cpp  struct_main.h  (+3 more)
src/AudioData/: AudioData.cpp  AudioData.h
src/FileContainer/: FileContainer.cpp  FileContainer.h  FileInstance.cpp  FileInstance.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  FileWriterMulti.cpp  MemReadable.cpp  MemReadable.h  MemWritable.cpp  MemWritable.h  WZip.cpp  WZip.h  WZipCommon.cpp  WZipCommon.h  WZipReaderSingle.cpp  WZipReaderSingle.h  WZipWriter.cpp  WZipWriter.h  WZipWriterMulti.cpp  WZipWriterMulti.h  WZipWriterSingle.cpp  WZipWriterSingle.h
src/Scheduler/: Scheduler.cpp  Scheduler.h  SchedulerIos.mm  SchedulerQt.cpp  SchedulerQt.h  WObject.cpp  WObject.h  WPool.cpp  WPool.h  WTask.cpp  WTask.h  WTaskAllocator.cpp  WTaskAllocator.h  WTimer.cpp  WTimer.h
src/audioplay/: AudioPlayerIOS.h  AudioPlayerIOS.mm  AudioPlayerQt.cpp  AudioPlayerQt.h  aggiornotastiriascolto.cpp  aggiornotastiriascolto.h  audioplay.cpp  audioplay.h  audioplayer_qt.cpp  audiovolume.cpp  cambioiconariascolto.h  cambiostatoplayer.cpp  ctrlAudioPlay.cpp  enableriascolto.cpp  main_audioplay.cpp  playbottonfunction.cpp  riascoltoaudioprogressivo.cpp  slidertimechange.cpp  stopriascolto.cpp  updatestatusbar_riascolto.cpp  valuechangeslidervolume.cpp
src/audiorecord/: AudioRecorderQt.cpp  AudioRecorderQt.h  audiorecord.cpp  audiorecord.h  audiorecord_qt.cpp  ctrlAudioRecord.cpp  displayErrorMessage.cpp  getbufferlevels.cpp  getbufferlevels.h  start_recording.cpp  stoprecording.cpp
src/audiosetting/: audioqualityoption.cpp  audioqualityoption.h  audioqualityoption.ui  definition.h  impostazionequalitaaudio.cpp  loadqualita.cpp  loadqualita.h  savequalita.cpp  savequalita.h
src/autosave/: autosave_.cpp  autosave_.h  autosave_mainwindow.cpp
src/button/: button_size.cpp  button_size.h  button_size.ui
src/cloud/: button_mainwindow.cpp  cloud_controll.cpp  cloud_controll.h  cloud_ui.cpp  cloud_ui.h  cloud_ui.ui  error_type.h  on_select.cpp  request_type.h  struct_file.cpp  struct_file.h  struct_mail.h  struct_user.cpp  struct_user.h  url.h
src/core/: Allocator.cpp  Allocator.h  Allocators.cpp  Allocators.h  AtomicSafe.cpp  AtomicSafe.h  DebugSTD.h  DebugVariable.h  Error.cpp  Error.h  FileContainer.cpp  FileContainer.h  FileInstance.h  FileReader.h  FileWriter.cpp  FileWriter.h  Index.cpp  Index.h  MallocWrapper.cpp  MallocWrapper.h  MemoryAllocator.cpp  MemoryAllocator.h  ObjectFinal.cpp  ObjectFinal.h  Point.cpp  Point.h  PointF.cpp  PointF.h  PointTemplate.h  Rect.h  RectF.cpp  RectF.h  Settable.cpp  Settable.h  WAbstractList.cpp  WAbstractList.h  WByteArray.cpp  WByteArray.h  WDir.cpp  WDir.h  (+79 more)
src/currenttitle/: audiototext.cpp  audiototext.h  checksimilecopybook.cpp  checksimilecopybook.h  compressvideo.cpp  currenttitle_class.cpp  currenttitle_class.h  deleteaudio.cpp  deleteaudio.h  deletecopybook.cpp  deletecopybook.h  document.cpp  document.h  main_include_currenttitle.h  newcopybook.cpp  redolist.cpp  redolist.h  renamefile.cpp  renamefile.h  rightclicklistcopybook.cpp
src/datamanage/: check1.cpp  check1.h  checkinserimento.cpp  checkinserimento.h  checkinternamente.cpp  checkult.cpp  eliminazioneNFrasi.cpp  retry_save_audio.cpp  retry_save_audio.h  setFile_mainwindow.cpp  sistemazionedatiregistrati.cpp  spacchettamento.cpp  spacchettamento.h  stoprecording.cpp
src/dataread/: load_from_file.cpp  load_from_file.h  loadbinario.cpp  loadfile.cpp  loadfile_xmlstruct.cpp  loadindice_xmlstruct.cpp  readlistarray.cpp  readlistarray.h  xmlstruct.cpp  xmlstruct.h
src/datawrite/: colortoint.cpp  (+21 more)
test/: mem_check.sh  test_function.py  test_thread.py
updater/: CMakeLists.txt  main.cpp  readme.md  updater.cpp  updater.exe.manifest  updater.h  updater.pro  updater.ui
updater/launch_updater/: launch_updater.cpp  launch_updater.h
windows/: README.md  build_libzip.sh  build_poppler.sh  compile.psm1  compile.sh  dipendenze.sh  package.bat  package.iss  windows.bat
(+599 files in other folders)
